deployments/busybox-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-backend-deployment
spec:
  selector:
    matchLabels:
      app: busybox-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox-backend

    spec:
      containers:
        - name: busybox-backend
          image: jahedulislam/busybox-backend:latest
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: busybox-backend-service
spec:
  selector:
    app: busybox-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: "TCP"
      nodePort: 32500
  type: NodePort
