deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: busybox-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: busybox.local
      http:
        paths:
          - path: /busyBox/api/v1
            pathType: Prefix
            backend:
              service:
                name: busybox-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
